# actorus

./: .env.example  .gitignore  ACTOR_AGENTS.md  AGENT_BUILDER_GUIDE.md  ARCHITECTURE.md  BOOKIDEAS.md  CLAUDE.md  CONTEXT_DATA_PASSING.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_INDEX.md  EXAMPLES.md  FACTORY_REFACTOR.md  FINAL_STATUS.md  FUSION.md  HANDOFF_VALIDATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MULTI_AGENT_PROGRESS.md  MULTI_AGENT_USAGE.md  MYIDEAS.md  PLUGINIDEAS.md  QUICKSTART_AGENT.md  REACT_AGENTS.md  README.md  REAL_WORLD_SUPERVISOR_EXAMPLE.md  RENAME_SUMMARY.md  SESSION_STORAGE.md  SESSION_USAGE.md  STATUS.md  SUPERVISOR_REAL_WORLD_SUMMARY.md  TESTING_SUMMARY.md  TOOLS_COMPLETE_GUIDE.md  TOOL_MACROS.md  TOOL_USAGE.md  UNDERSTANDING.md  VERIFY.md  VISUALIZATION.md  rust_count.txt  status.txt  (+1 more)
actorus_macros/: Cargo.toml
actorus_macros/src/: lib.rs
config/: default.toml
examples/: advanced_tool_macro.rs  advanced_usage.rs  agent_introspection.rs  agent_usage.rs  batch_processing.rs  handoff_validation_example.rs  interactive_session.rs  mcp_discover_tools.rs  mcp_simple_demo.rs  router_custom_agents.rs  router_usage.rs  session_usage.rs  simple_agent_test.rs  simple_usage.rs  simplified_agent_builder.rs  supervisor_code_review_pipeline.rs  supervisor_custom_agents.rs  supervisor_database_pipeline.rs  supervisor_database_pipeline_compact.rs  supervisor_database_pipeline_with_validation.rs  supervisor_database_validation_compact.rs  supervisor_dynamic_mcp_tools.rs  supervisor_mcp_research_pipeline.rs  supervisor_usage.rs  supervisor_with_custom_tools.rs  supervisor_with_validation.rs  test_agent.rs  tool_full_macro.rs  tool_function_style.rs  tool_proc_macro.rs  tool_with_fields.rs  tool_with_macro.rs
src/: api.rs  lib.rs  main.rs
src/actors/: agent_actor.rs  agent_builder.rs  agent_session.rs  handoff.rs  health_monitor.rs  llm_actor.rs  mcp_actor.rs  message_router.rs  messages.rs  mod.rs  router_agent.rs  specialized_agent.rs  specialized_agents_factory.rs  supervisor_agent.rs  validation.rs
src/cli/: commands.rs
src/config/: settings.rs
src/core/: llm.rs  mcp.rs  mod.rs
src/storage/: filesystem.rs  memory.rs  mod.rs
src/tools/: executor.rs  filesystem.rs  http.rs  macros.rs  mod.rs  registry.rs  shell.rs
src/utils/: display.rs
tests/: integration_test.rs
