[package]
name = "actorus"
version = "0.1.0"
edition = "2021"
authors = ["Richard Chukwu"]
description = "Actor-based multi-agent system for LLM orchestration with MCP integration"
license = "MIT"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
  "stream",
] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
dotenvy = "0.15"
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2.1"
once_cell = "1.19"
async-trait = "0.1"
actorus_macros = { path = "actorus_macros" }
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"
wiremock = "0.6"

[[bin]]
name = "actorus"
path = "src/main.rs"

[[example]]
name = "simple_usage"
path = "examples/simple_usage.rs"

[[example]]
name = "advanced_usage"
path = "examples/advanced_usage.rs"

[[example]]
name = "router_usage"
path = "examples/router_usage.rs"

[[example]]
name = "agent_introspection"
path = "examples/agent_introspection.rs"

[[example]]
name = "interactive_session"
path = "examples/interactive_session.rs"

[[example]]
name = "session_usage"
path = "examples/session_usage.rs"

[[example]]
name = "advanced_tool_macro"
path = "examples/advanced_tool_macro.rs"

[[example]]
name = "tool_function_style"
path = "examples/tool_function_style.rs"

[[example]]
name = "supervisor_database_pipeline_with_validation"
path = "examples/supervisor_database_pipeline_with_validation.rs"
